src/test/ui/parser/fn-arg-doc-comment.stderr
error: attributes cannot be applied to a function parameter's type
  --> $DIR/fn-arg-doc-comment.rs:12:12
   |
LL | fn bar(id: #[allow(dead_code)] i32) {}
   |            ^^^^^^^^^^^^^^^^^^^ attributes are not allowed here

error: documentation comments cannot be applied to function parameters
  --> $DIR/fn-arg-doc-comment.rs:2:5
   |
LL |     /// Comment
   |     ^^^^^^^^^^^ doc comments are not allowed here

error: documentation comments cannot be applied to function parameters
  --> $DIR/fn-arg-doc-comment.rs:6:5
   |
LL |     /// Other
   |     ^^^^^^^^^ doc comments are not allowed here

error[E0308]: mismatched types
  --> $DIR/fn-arg-doc-comment.rs:18:7
   |
LL |     f("", "");
   |       ^^ expected u8, found reference
   |
   = note: expected type `u8`
              found type `&'static str`

error[E0308]: mismatched types
  --> $DIR/fn-arg-doc-comment.rs:18:11
   |
LL |     f("", "");
   |           ^^ expected u8, found reference
   |
   = note: expected type `u8`
              found type `&'static str`

error[E0308]: mismatched types
  --> $DIR/fn-arg-doc-comment.rs:25:9
   |
LL |     bar("");
   |         ^^ expected i32, found reference
   |
   = note: expected type `i32`
              found type `&'static str`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.
